--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
    "dependencies": {
       "body-parser": "^1.18.1",
       "cookie-parser": "^1.4.5",
+      "crypto": "^1.0.1",
       "express": "^4.15.4",
       "http-errors": "^1.7.3",
       "http-status-codes": "^1.4.0",
