--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
    "version": "0.0.1",
    "description": "Inspirehub api backend",
    "devDependencies": {
+      "@types/cors": "^2.8.6",
       "@types/express": "^4.17.6",
       "@types/node": "^8.10.60",
       "ts-node": "3.3.0",
       "typescript": "3.3.3333"
    },
    "dependencies": {
+      "@types/socket.io": "^2.1.8",
       "body-parser": "^1.18.1",
       "cookie-parser": "^1.4.5",
+      "cors": "^2.8.5",
       "crypto": "^1.0.1",
       "express": "^4.15.4",
       "http-errors": "^1.7.3",
@@ -18,6 +21,7 @@
       "morgan": "^1.10.0",
       "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
+      "socket.io": "^2.3.0",
       "typeorm": "0.2.24"
    },
    "scripts": {
