--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
    "compilerOptions": {
       "lib": [
-         "es5",
-         "es6"
+        "es5",
+        "es6",
+        "dom"
       ],
       "target": "es5",
       "module": "commonjs",
@@ -10,6 +11,6 @@
       "outDir": "./dist",
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
-      "sourceMap": true
+      "sourceMap": false
    }
 }
